--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ForecastActivity" android:label="Wheater">
+        <activity android:name=".activity.ForecastActivity" android:label="Wheater">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SettingsActivity" android:label="@string/settings">
+        <activity android:name=".activity.SettingsActivity" android:label="@string/settings">
 
         </activity>
     </application>
